# avral_hello

./: .gitlab-ci.yml  Dockerfile  README.md  README.txt  avral_helloworld_io.txt  deploy.sh  pyproject.toml  setup.py
avral_hello/: operations.py
avral_helloworld/: operations.py
example/: config.yaml
example/test/: contents.txt
